Forgot a few things in the changelog.

--- a/dada/extras/documentation/pod_source/changes_4_x.pod
+++ b/dada/extras/documentation/pod_source/changes_4_x.pod
@@ -57,16 +57,20 @@ https://github.com/justingit/dada-mail/issues#issue/149
 
 =back
 
-=head2 View List Screen Doesn't Show So Much Stuff if There's Nothing to Show
+=head3 View List Screen Doesn't Show So Much Stuff if There's Nothing to Show
 
 If you don't have any Subscribers/Addresses to show, the View List Screen no longer shows
 all that Stuff it usually shows. 
 
-=head2 Black List Additions are Made a Little More Clearly Known
+=head3 Black List Additions are Made a Little More Clearly Known
 
 In the List Control Panel, if you remove addresses from your mailing list, the number of addresses that are then black listed is now displayed, instead of just mysteriously being added. 
 
 =head2 Bug Fixes
+
+=head3 Finished Mass Mailing Notification has unparsed template tag
+
+https://github.com/justingit/dada-mail/issues/157
 
 =head3 Clicking, "Send Invitations" with no addresses to invite leads to a broken screen
 
