Closes #159 Attachments Unviewable in Archives if the attachment has a space in the filename

--- a/dada/extras/documentation/pod_source/changes_4_x.pod
+++ b/dada/extras/documentation/pod_source/changes_4_x.pod
@@ -72,6 +72,10 @@ You can now erase the Bounce Scorecard on a list-per-list basis in the list cont
 
 =head2 Bug Fixes
 
+=head3 Attachments Unviewable in Archives if the attachment has a space in the filename 
+
+https://github.com/justingit/dada-mail/issues/159
+
 =head3 Finished Mass Mailing Notification has unparsed template tag
 
 https://github.com/justingit/dada-mail/issues/157
