--- a/dada/extras/documentation/pod_source/install_dada_mail.pod
+++ b/dada/extras/documentation/pod_source/install_dada_mail.pod
@@ -13,15 +13,11 @@ L<http://dadamailproject.com/support/documentation/manually_install_dada_mail.po
 
 Here's the direct download to Dada Mail v4.4.3: 
 
-L<https://github.com/downloads/justingit/dada-mail/dada-4_4_3-rc1.tar.gz>
+L<https://github.com/downloads/justingit/dada-mail/dada-4_4_3.tar.gz>
 
-=cut
+Pro Dada Subscriber? Download Pro Dada at: 
 
-(If you have Pro Dada, you can download v4.4.3 of Pro Dada here:)
-
-L<http://dadamailproject.com/pro_dada/index.cgi?rm=download_file&filename=pro_dada-4_4_3-rc1.tar.gz>
-
-=pod
+L<http://dadamailproject.com/pro_dada>
 
 
 Save the distribution to your Desktop Computer (you will B<not> have to uncompress the distribution) and then upload the, tar.gz file to your hosting account's I<cgi-bin>. 
@@ -30,7 +26,7 @@ Save the distribution to your Desktop Computer (you will B<not> have to uncompre
 
 Download the, C<uncompress_dada.cgi> script from here: 
 
-=for html <ul><li><strong><a href="https://github.com/justingit/dada-mail/raw/v4_4_3_rc1-2011_03_15/uncompress_dada.cgi">uncompress_dada.cgi</a> (Save Page/Link As...)</strong></li></ul>
+=for html <ul><li><strong><a href="https://github.com/justingit/dada-mail/raw/v4_4_3_stable-2011_03_17/uncompress_dada.cgi">uncompress_dada.cgi</a> (Save Page/Link As...)</strong></li></ul>
 
 and upload this script (PlainTest/ASCII mode - NOT binary!) to your hosting account's I<cgi-bin> - right alongside the tar.gz file you just put up. 
 
