--- a/dada/extras/documentation/pod_source/FAQ-general.pod
+++ b/dada/extras/documentation/pod_source/FAQ-general.pod
@@ -220,6 +220,35 @@ With the following:
 
 This will provide a link to unsubscribe, but the user will have to manually enter their email address. 
 
+=head2 Unubscription links are placed on top of my mailing list messages, why? 
+
+Dada Mail has an in-program policy of requiring the unsubscription link to be prsent 
+in any mass mailing messages it sends out. This is to stop blatant abuse of the program, but we also 
+do sincerely suggest this as a best practice when using the program. If an unsubscribe link is not found 
+in your mailing list message, Dada Mail will simply add one to the top of the message. 
+
+The following unsubscription links/tags can be used: 
+
+=over
+
+=item * Path Info style, embeds in the email address of the subscriber
+
+	<!-- tmpl_var list_unsubscribe_link -->
+
+=item * Path Info style, embeds in the email address of the subscriber
+
+<!-- tmpl_var PROGRAM_URL -->/u/<!-- tmpl_var list_settings.list -->/<!-- tmpl_var subscriber.email_name -->/<!-- tmpl_var subscriber.email_domain -->/
+
+=item * Path Info style, DOES NOT embed the email address of the subscriber
+
+	<!-- tmpl_var PROGRAM_URL -->/u/<!-- tmpl_var list_settings.list -->
+
+=item * Query-String style, does NOT embed the email address of the subscriber: 
+
+	<!-- tmpl_var PROGRAM_URL -->?f=u&l=<!-- tmpl_var list_settings.list -->
+
+=back
+
 =head1 Hosting
 
 =head2 Do you host Dada Mail or do I host Dada Mail? 
