--- a/dada/extras/documentation/pod_source/changes_4_x.pod
+++ b/dada/extras/documentation/pod_source/changes_4_x.pod
@@ -2,6 +2,27 @@
 
 =head1 Dada Mail Changelog for version 4.x.x
 
+=head1 4.5.2
+
+=head2 Summary 4.5.2
+
+v4.5.2 fixes some small bugs found in v4.5.1 of Dada Mail, as well as adding 
+additional capabilities to the Tracker Plugin 
+
+=head2 Bug Fixes 4.5.2
+
+=head3 "Download List (CSV)" (PlainText backend) all on one line
+
+https://github.com/justingit/dada-mail/issues/169
+
+=head2 Features 4.5.2
+
+=head3 Tracker: Domain Breakdown of bouncing email addresses
+
+=head3 Tracker: Messages Opens Over Time
+
+=head3 Tracker: Messages Clickthroughs Over Time
+
 =head1 4.5.1
 
 =head2 Summary 4.5.1
