--- a/dada/extras/documentation/pod_source/features-amazon_ses_support.pod
+++ b/dada/extras/documentation/pod_source/features-amazon_ses_support.pod
@@ -101,6 +101,8 @@ L<http://docs.amazonwebservices.com/ses/latest/DeveloperGuide/SendingEmail.Raw.h
 
 L<http://docs.amazonwebservices.com/ses/latest/DeveloperGuide/InitialSetup.EmailVerification.html>
 
+L<http://docs.amazonwebservices.com/ses/latest/DeveloperGuide/ManagingActivity.SendingLimits.html>
+
 =head2 Configure Dada Mail with your Amazon SES configuration. 
 
 None of the Amazon AWS credentials are stored within Dada Mail - only in that AWS Credentials file. 
@@ -114,6 +116,7 @@ In your C<.dada_config> file, add the following lines:
 		aws_credentials_file            => undef, 
 		ses_send_email_script           => undef, 
 		ses_verify_email_address_script => undef, 
+		ses_get_stats_script            => undef, 
 	};
 
 And fill out the necessary information. In this example: 
@@ -121,7 +124,9 @@ And fill out the necessary information. In this example:
 	$AMAZON_SES_OPTIONS = { 
 		aws_credentials_file            => '/home/myaccount/aws-credentials, 
 		ses_send_email_script           => '/home/myaccount/ses/bin/ses-send-email.pl, 
-		ses_verify_email_address_script => '/home/myaccount/ses/bin/ses-verify-email-address.pl, 
+		ses_verify_email_address_script => '/home/myaccount/ses/bin/ses-verify-email-address.pl,
+		ses_get_stats_script            => '/home/myaccount/ses/bin/ses-get-stats.pl, 
+		 
 	};
 
 C</home/myaccount> is my home directory, C<aws-credentials> is the name of the AWS Credentials file
@@ -203,7 +208,7 @@ do not do this step, messages will not be sent from Dada Mail.
 
 =head1 Bugs
 
-Probaby plenty. Please give feedback using the links, below: 
+Probably plenty. Please give feedback using the links, below: 
 
 =head1 Feedback Appreciated
 
